--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,4 +3,17 @@
   <p><%= post.content %></p>
 <% end %>
 
-hello :D
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm">
+      Hello :)
+    </div>
+    <div class="col-sm">
+      One of three columns
+    </div>
+    <div class="col-sm">
+      One of three columns
+    </div>
+  </div>
+</div>
