--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,18 +1,18 @@
 <% @posts.each do |post| %>
-  <h1><%= link_to "post.title", post %></h1>
+  <h1><%= link_to post.title, post %></h1>
   <p><%= post.content %></p>
 <% end %>
 
 
 <div class="container">
   <div class="row">
-    <div class="col-sm">
+    <div class="col-xs-4">
       Hello :)
     </div>
-    <div class="col-sm">
+    <div class="col-xs-4">
       One of three columns
     </div>
-    <div class="col-sm">
+    <div class="col-xs-4">
       One of three columns
     </div>
   </div>
