--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -4,10 +4,10 @@
 
   <%= f.collection_select(:category_id, Category.all, :id, :name, {prompt: "Choose a category" }) %><br>
   <%= f.label :title %><br>
-  <%= f.text_field :title, placeholder: "Type the post title here" %><br>
+  <%= f.text_field :title, placeholder: "Type the post title here", class: 'form-control' %><br>
   <%= f.label :content %><br>
-  <%= f.text_area :content, size: "60x12", placeholder: "Type the post text here" %><br>
+  <%= f.text_area :content, size: "60x12", placeholder: "Type the post text here", class: 'form-control' %><br>
 
-  <%= f.submit %>
+  <%= f.submit class: 'btn btn-primary' %>
 
 <% end %>
