--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,7 @@
 <h1><%= @post.title %></h1>
-<p><%= @post.content %></p>
+<p class="well"><%= @post.content %></p>
 <%= link_to "Edit", edit_post_path(@post) %>
-<%= link_to "Delete", @post, method: :delete, data: { confirm: "Are you sure?" } %>
+<%= link_to "Delete", @post, method: :delete, class: 'btn btn-danger', data: { confirm: "Are you sure?" } %>
+<hr>
+<%= render 'comments/comments' %>
+<%= render 'comments/form' %>
