--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,2 +1,14 @@
  @import "bootstrap-sprockets";
  @import "bootstrap";
+
+body {
+  margin-left: 10px;
+}
+
+.navbar {
+  margin: -10px;
+}
+
+.form-control {
+  width: 60%;
+}
