--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,6 @@
 <h1><%= @post.title %></h1>
 <p class="well"><%= @post.content %></p>
-<%= link_to "Edit", edit_post_path(@post) %>
+<%= link_to "Edit", edit_post_path(@post), class: 'btn btn-danger'%>
 <%= link_to "Delete", @post, method: :delete, class: 'btn btn-danger', data: { confirm: "Are you sure?" } %>
 <hr>
 <%= render 'comments/comments' %>
