--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -7,7 +7,8 @@
   <%= f.text_field :title, placeholder: "Type the post title here", class: 'form-control' %><br>
   <%= f.label :content %><br>
   <%= f.text_area :content, size: "60x12", placeholder: "Type the post text here", class: 'form-control' %><br>
-
+  <%= f.label :image %><br>
+  <%= f.file_field :image %><br>
   <%= f.submit class: 'btn btn-primary' %>
 
 <% end %>
