--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,5 @@
 <% @posts.each do |post| %>
   <h1><%= link_to post.title, post %></h1>
+  <%= image_tag post.image_url.to_s %>
   <p><%= post.content %></p>
 <% end %>
