--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,7 +1,7 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top">
-   <a class="navbar-brand" href="#">
-     <span id="name">beth callam</span>
-   </a>
+<nav class="navbar navbar-expand-md fixed-top">
+   <div class="navbar-brand" href="/">
+     <span id="name" onclick="co('FF5')">beth callam</span>
+   </div>
    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
      <span class="navbar-toggler-icon"></span>
    </button>
